Fixed scrollbar bug

--- a/themes/Amano/css/grid.css
+++ b/themes/Amano/css/grid.css
@@ -32,7 +32,7 @@
   left: 0px;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: 101%;
 }
 #home .text {
   position: absolute;
